--- a/Lep/Lep.csproj
+++ b/Lep/Lep.csproj
@@ -40,7 +40,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
@@ -88,6 +88,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArgumentNode.cs" />
+    <Compile Include="ArrayNode.cs" />
+    <Compile Include="ArrayReferenceNode.cs" />
     <Compile Include="AstBranch.cs" />
     <Compile Include="AstLeaf.cs" />
     <Compile Include="BlockNode.cs" />
@@ -95,6 +97,7 @@
     <Compile Include="Environment.cs" />
     <Compile Include="ExpressionNode.cs" />
     <Compile Include="GuardValue.cs" />
+    <Compile Include="Tuple.cs" />
     <Compile Include="UserFunction.cs" />
     <Compile Include="FunctionDefinitionNode.cs" />
     <Compile Include="GuardListNode.cs" />
