Add table support and change tuple assignment
Add table (Associative array) support
Change tuple assignment which now supports pair with different element number

--- a/Lep/Lep.csproj
+++ b/Lep/Lep.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Environment.cs" />
     <Compile Include="ExpressionNode.cs" />
     <Compile Include="GuardValue.cs" />
+    <Compile Include="TableNode.cs" />
     <Compile Include="Tuple.cs" />
     <Compile Include="UserFunction.cs" />
     <Compile Include="FunctionDefinitionNode.cs" />
